<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B2631">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/haunted_barn"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:contentDescription="@string/haunted_barn_photo"
            android:scaleType="centerCrop"
            android:src="@drawable/hauntedbarn" />

        <TextView
            android:id="@+id/haunt_inc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/haunted_barn"
            android:fontFamily="@font/crimson_text"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:text="@string/haunted_escapes_inc"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/haunt_inc"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/crimson_text"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:text="@string/description"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="115dp"
            android:layout_height="111dp"
            android:layout_below="@id/description"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            app:srcCompat="@drawable/creepyghost" />

        <ImageView
            android:id="@+id/email_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@id/description"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/imageView"
            android:layout_toRightOf="@id/imageView"
            android:background="#000286"
            android:contentDescription="@string/email_icon"
            app:srcCompat="@android:drawable/sym_action_email" />

        <ImageView
            android:id="@+id/phone_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_icon"
            android:layout_alignStart="@id/email_icon"
            android:layout_alignLeft="@id/email_icon"
            android:layout_alignEnd="@id/email_icon"
            android:layout_alignRight="@id/email_icon"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/haunt_inc"
            android:layout_toRightOf="@id/haunt_inc"
            android:background="#000286"
            android:contentDescription="@string/phone_icon"
            android:paddingBottom="1dp"
            app:srcCompat="@android:drawable/stat_sys_phone_call" />

        <ImageView
            android:id="@+id/web_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_icon"
            android:layout_alignStart="@id/phone_icon"
            android:layout_alignLeft="@id/phone_icon"
            android:layout_alignEnd="@id/phone_icon"
            android:layout_alignRight="@id/phone_icon"
            android:background="#000286"
            android:contentDescription="@string/website_icon"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            app:srcCompat="@android:drawable/ic_menu_mapmode" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_toEndOf="@id/email_icon"
            android:layout_toRightOf="@id/email_icon"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/email"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/phone_text"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_text"
            android:layout_centerHorizontal="true"
            android:layout_toEndOf="@id/phone_icon"
            android:layout_toRightOf="@id/phone_icon"
            android:ems="10"
            android:paddingStart="7dp"
            android:paddingLeft="7dp"
            android:paddingTop="16dp"
            android:text="@string/phonenum"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/web_text"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_text"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@id/web_icon"
            android:ems="10"
            android:paddingLeft="7dp"
            android:paddingTop="16dp"
            android:text="@string/website"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#FFFFFF" />

    </RelativeLayout>
</ScrollView>